--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,14 @@
 </ul>
 <p>Sample paragraph</p>
 <p class="para2" id="para1">Sample paragraph</p>
+<p class="para-border">Bordered paragraph example</p>
+<p class="para-border2">Bordered paragraph example 2</p>
+<p class="para-margin para-border2">Bordered paragraph with margin example 2</p>
+
+<p class="para3" >Bordered paragraph with <b>auto</b> margin example 2</p>
+
+<div class="margin-div1">
+  <p class="inherited-margin-para1" style="">Paragraph with inherited margin</p>
+
+</div>
 <router-outlet></router-outlet>
