--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #868686f6;
+    
 }
 
 h1 {
@@ -13,17 +13,50 @@ h1 {
 
 p,h1,h2 {
     color:tomato;
-    text-align: center;
     background-color: white;
 }
 
 #para1 {
     text-align: right;
     color: green;
-    background-image: url('./assets/wall.jpg');
 }
 
 .para2 {
     text-align: left;
     color: yellow;
+}
+
+.para-border {
+    border: 5px solid black;
+    border-top: 2px solid gray;
+    border-bottom: 4px solid green;
+    border-radius: 8px;
+ 
+}
+
+.para-border2 {
+    border-style:solid;
+    border-radius: 5px;
+    border-color: red green yellow purple;
+    border-width: 2px 4px 8px 16px;
+ 
+}
+
+.para-margin {
+    margin: 2px 4px 8px 12px;
+}
+
+.para3 {
+    border: 1px solid black;
+    width:200px;
+    margin: auto;
+}
+
+.margin-div1 {
+    margin-left: 50px;
+    border: 1px solid gray;
+}
+
+p.inherited-margin-para1 {
+    margin: inherit;
 }
