added table styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,4 +28,168 @@
   <p class="inherited-margin-para1" style="">Paragraph with inherited margin</p>
 
 </div>
+
+<div class="padding-20">
+  Div with padding 5px 10px 20px 15px
+</div>
+
+<a href="https://www.w3schools.com/" target="_blank">Test link button</a>
+
+<div style="background-color: #bddcff; margin:2px;">
+Ordered list
+<ol>
+  <li>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; One</li>
+  <li>Two</li>
+  <li>Three</li>
+  <li>Four</li>
+  <li>Five</li>
+</ol>
+
+</div>
+
+<div style="background-color: #bdffc0; margin:2px;display: inline-block;">
+  Ordered list
+  <ul>
+    <li>             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mon</li>
+    <li>Tue</li>
+    <li>Wed</li>
+  </ul>
+  
+  </div>
+<br/>
+  <div style="background-color: #bdffc0; margin:2px;display: inline-block;">
+    Ordered list 2
+    <ul style="list-style-type: circle;margin: 0;padding: 0;">
+      <li style="background-color: red;">             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mon</li>
+      <li>Tue</li>
+      <li>Wed</li>
+    </ul>
+    
+    </div>
+
+
+    <div style="overflow-x:auto;">
+      <table>
+        <tr>
+            <th><input type="checkbox"></th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+          <th>Points</th>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>Jill</td>
+          <td>Smith</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+          <td>50</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+        </tr>
+        <tr>
+            <td><input type="checkbox"></td>
+          <td>Adam</td>
+          <td>Johnson</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+        </tr>
+        <tr>
+            <td><input type="checkbox"></td>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+        </tr>
+        <tr>
+            <td><input type="checkbox"></td>
+          <td>Adam</td>
+          <td>Johnson</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+          <td>67</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox"></td>
+          <td>Eve</td>
+          <td>Jackson</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+          <td>94</td>
+        </tr>
+        <tr>
+            <td></td>
+          <td><input type="text" placeholder="Name"></td>
+          <td><input type="text" placeholder="Last name"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+          <td><input type="text" placeholder="Points"></td>
+        </tr>
+      </table>
+    </div>
 <router-outlet></router-outlet>
