--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,6 +70,7 @@ Ordered list
 
     <div style="overflow-x:auto;">
       <table>
+        <caption>Players points 1.2.4.0</caption>
         <tr>
             <th><input type="checkbox"></th>
           <th>First Name</th>
@@ -177,7 +178,7 @@ Ordered list
         </tr>
         <tr>
             <td></td>
-          <td><input type="text" placeholder="Name"></td>
+          <td><input type="text" placeholder="Name" style="caret-color: red;"></td>
           <td><input type="text" placeholder="Last name"></td>
           <td><input type="text" placeholder="Points"></td>
           <td><input type="text" placeholder="Points"></td>
@@ -192,4 +193,9 @@ Ordered list
         </tr>
       </table>
     </div>
+
+    <div class="display-test">
+      Test display-test
+    </div>
+    <span style="background-color: aquamarine;display:default;">Span demo</span>
 <router-outlet></router-outlet>
