--- a/src/styles.css
+++ b/src/styles.css
@@ -113,6 +113,9 @@ tr:hover {
 
 table {
     border-collapse: collapse;
+    caption-side: bottom;
+    width: 100%;
+    table-layout: auto;
 }
 
 th {
@@ -121,4 +124,9 @@ th {
     font-style: normal;
     font-weight: normal;
     
+}
+
+.display-test {
+    display: default;
+    background-color: #fd9f9f;
 }
