--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<div class="sticky-position">
+  This is sticky combination of fixed and relative
+</div>
 <p>Sample paragraph</p>
 <p class="para2" id="para1">Sample paragraph</p>
 <p class="para-border">Bordered paragraph example</p>
@@ -161,9 +164,9 @@ Ordered list
           <td>67</td>
           <td>67</td>
         </tr>
-        <tr>
+        <tr style="visibility: collapse;">
           <td><input type="checkbox"></td>
-          <td>Eve</td>
+          <td>Eveeee</td>
           <td>Jackson</td>
           <td>94</td>
           <td>94</td>
@@ -198,4 +201,59 @@ Ordered list
       Test display-test
     </div>
     <span style="background-color: aquamarine;display:default;">Span demo</span>
+
+    <br/><br/>---------------Display--------------------<br/><br/>
+    <code>&lt;span&gt;, &lt;a&gt;, &lt;img&gt; are inline elements </code>
+    <br/><br/>---------------Display Inline li tag demo--------------------<br/><br/>
+    
+    <ul class="inline-list">
+      <li>W1</li>
+      <li>W2</li>
+      <li>W3</li>
+    </ul>
+
+    <div class="max-width-500">This is a demo for max-width attribute of a div</div>
+
+    <br/><br/>---------------Display Position li tag demo--------------------<br/><br/>
+
+    <div class="relative">
+        <div class="absolute">
+          This is a absolute div
+        </div>
+      This is a relative div
+    </div>
+    <img src="./assets/wall.jpg" height="auto" width="500px" class="z-index--1">
+
+    <br/><br/>---------------Display Float demo--------------------<br/><br/>
+
+    <div class="float-demo">
+        <img src="./assets/wall.jpg" height="auto" width="200px">
+        demo text for floating and image
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        In viverra luctus diam. Fusce et ultrices turpis.
+         Proin urna sem, lacinia non felis ut, aliquam tincidunt lorem.
+          Proin posuere diam a quam mollis feugiat.
+           Duis nisi tellus, cursus eu tortor vitae, suscipit ornare ligula.
+            Cras quis lorem velit. Duis eget tortor viverra, ultricies turpis a,
+             aliquet lorem. Aliquam vel porta ligula. Nunc consequat faucibus dolor,
+              a vehicula ipsum pellentesque in.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        In viverra luctus diam. Fusce et ultrices turpis.
+         Proin urna sem, lacinia non felis ut, aliquam tincidunt lorem.
+          Proin posuere diam a quam mollis feugiat.
+           Duis nisi tellus, cursus eu tortor vitae, suscipit ornare ligula.
+            Cras quis lorem velit. Duis eget tortor viverra, ultricies turpis a,
+             aliquet lorem. Aliquam vel porta ligula. Nunc consequat faucibus dolor,
+              a vehicula ipsum pellentesque in.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        In viverra luctus diam. Fusce et ultrices turpis.
+         Proin urna sem, lacinia non felis ut, aliquam tincidunt lorem.
+          Proin posuere diam a quam mollis feugiat.
+           Duis nisi tellus, cursus eu tortor vitae, suscipit ornare ligula.
+            Cras quis lorem velit. Duis eget tortor viverra, ultricies turpis a,
+             aliquet lorem. Aliquam vel porta ligula. Nunc consequat faucibus dolor,
+              a vehicula ipsum pellentesque in.
+              <p>AAAAAAAAAAAAAAAAAAAA</p>
+    </div>
+    <p>sasfsfdsfds</p>
 <router-outlet></router-outlet>
