--- a/src/styles.css
+++ b/src/styles.css
@@ -130,3 +130,58 @@ th {
     display: default;
     background-color: #fd9f9f;
 }
+
+.inline-list li {
+    display: inline;
+    background-color: #7097ec;
+    margin:0px 0px 0px 10px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+    
+.max-width-500{
+    max-width: 500px;
+    border: 1px dotted red;
+}
+
+.relative {
+    height: 100px;
+    width: 500px;
+    border: 2px solid #2d8f2d;
+    position: relative;
+}
+
+.absolute {
+    height: 50px;
+    width: 150px;
+    position: absolute;
+    top: 30px;
+    right: 0px;
+    border: 1px solid black;
+}
+
+.sticky-position {
+    height: 20px;
+    width: 500px;
+    border: 3px solid #2d8f2d;
+    background-color: #d0ffd0;
+    position: sticky;
+    top: 5px;
+    left:250px;
+}
+
+.z-index--1 {
+    z-index: -1;
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
+
+.float-demo {
+    border: 2px solid black;
+}
+
+.float-demo img {
+    float: right;
+}
