--- a/src/app/float-style-page/float-style-page.component.html
+++ b/src/app/float-style-page/float-style-page.component.html
@@ -17,4 +17,23 @@
     <div class="footer">
         Footer text
     </div>
+    <div class="display-inline-200">
+        Display with inline
+    </div>
+    <br>
+    <div class="display-inline-block-200">
+        Display with inline block
+    </div>
+    <br>
+    <div class="display-inline-block-50pc">
+        Display with inline block
+    </div>
+    <div class="footer-navigation">
+        <ul>
+            <li><a routerLink="/float-style-page">Home</a></li>
+            <li><a routerLink="/float-style-page">Clients</a></li>
+            <li><a routerLink="/float-style-page">About Us</a></li>
+            <li><a routerLink="/float-style-page">Contact Us</a></li>
+        </ul>
+    </div>
 </div>
