--- a/src/app/first-page/first-page.component.html
+++ b/src/app/first-page/first-page.component.html
@@ -9,7 +9,8 @@
     <div>News</div>
     <div>Contact</div>
     <div>About</div>
-    <div><a  routerLink="/float-style-page" class="menu-link">Demo form</a></div>
+    <div><a  routerLink="/float-style-page" class="menu-link">Float demo</a></div>
+    <div><a  routerLink="/css-alignment-example" class="menu-link">Css alignment</a></div>
   </div>
   <h2>Here are some links to help you start: </h2>
   <ul>
