--- a/src/app/css-alignment-exaples/css-alignment-exaples.component.html
+++ b/src/app/css-alignment-exaples/css-alignment-exaples.component.html
@@ -1,1 +1,10 @@
-<p>css-alignment-exaples works!</p>
+<div class="auto-margin">
+    This div has auto margin for center alignment
+</div>
+
+<div class="center-align-text">
+    This div has center aligned text
+</div>
+
+
+<img src="./assets/wall.jpg" height="auto" width="200px">
