added some center align examples

--- a/src/app/css-alignment-exaples/css-alignment-exaples.component.html
+++ b/src/app/css-alignment-exaples/css-alignment-exaples.component.html
@@ -6,5 +6,22 @@
     This div has center aligned text
 </div>
 
-
+To center an image, set left and right margin to auto and make it into a block element:
 <img src="./assets/wall.jpg" height="auto" width="200px">
+
+
+<div class="right-align-position">Right align using position</div>
+<div class="clearfix">
+    <div class="right-align-float">Right align using float</div>
+</div>
+
+Clearfix overflow hack:
+
+<div class="clearfix2">
+    <img src="./assets/wall.jpg" height="auto" width="200px" class="right-floating-image">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum...
+</div>
+
+<div class="container-200">
+    <p>Align center using transform</p>
+</div>
