--- a/src/app/css-alignment-exaples/css-alignment-exaples.component.css
+++ b/src/app/css-alignment-exaples/css-alignment-exaples.component.css
@@ -16,3 +16,58 @@ img {
     display: block;
     
 }
+
+.right-align-position {
+    position: absolute;
+    right: 0px;
+    top: 150px;
+    padding: 10px;
+    border: 3px solid lightgreen;
+}
+
+.clearfix {
+    border: 2px solid black;
+}
+
+.right-align-float {
+    float: right;
+    width: 300px;
+    border: 3px solid lightgreen;
+    padding: 10px;
+}
+
+.clearfix::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+.clearfix2 {
+    border: 2px solid black;
+    overflow: auto;
+}
+
+.clearfix::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+.right-floating-image {
+    float: right;
+}
+
+.container-200 {
+    margin-top: 5px;
+    height: 200px;
+    border: 2px solid lightgreen;
+    position: relative;
+}
+.container-200 p{
+    margin: 0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
