pseudo classes demo

--- a/src/app/first-page/first-page.component.html
+++ b/src/app/first-page/first-page.component.html
@@ -8,9 +8,9 @@
     <div id="red-menu">Home</div>
     <div>News</div>
     <div>Contact</div>
-    <div>About</div>
     <div><a  routerLink="/float-style-page" class="menu-link">Float demo</a></div>
     <div><a  routerLink="/css-alignment-example" class="menu-link">Css alignment</a></div>
+    <div><a  routerLink="/pseudo-classes" class="menu-link">Pseudo classes</a></div>
   </div>
   <h2>Here are some links to help you start: </h2>
   <ul>
