--- a/src/app/pseudo-classes/pseudo-classes.component.html
+++ b/src/app/pseudo-classes/pseudo-classes.component.html
@@ -3,3 +3,32 @@
     <p class="tooltip">This is tooltip</p>
 </div>
 <p class="tooltip">This is not a tooltip</p>
+
+<p class="pseudo-element-first-letter">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+</p>
+<p class="pseudo-element-first-letter">
+Pretium fusce id velit ut. Facilisis sed odio morbi quis. Gravida cum sociis natoque penatibus et magnis dis parturient. 
+Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. 
+</p>
+<p class="pseudo-element-first-letter">
+Nunc sed id semper risus in hendrerit. Cursus sit amet dictum sit amet justo donec enim diam. 
+Suspendisse sed nisi lacus sed viverra tellus. 
+Nunc lobortis mattis aliquam faucibus purus in. Pellentesque sit amet porttitor eget dolor morbi. 
+Amet justo donec enim diam vulputate ut pharetra sit amet. Dictum non consectetur a erat nam. 
+Pellentesque massa placerat duis ultricies lacus sed turpis tincidunt. 
+</p>
+<p class="pseudo-element-first-letter">
+Aliquam ut porttitor leo a diam sollicitudin tempor id. 
+Non diam phasellus vestibulum lorem sed risus ultricies tristique. 
+Sit amet massa vitae tortor. Consequat ac felis donec et odio pellentesque diam.
+ Vestibulum mattis ullamcorper velit sed ullamcorper.
+</p>
+
+Vertical navigation example:
+<ul>
+    <li><a routerLink = "/pseudo-classes">Home</a></li>
+    <li><a routerLink = "/pseudo-classes">News</a></li>
+    <li><a routerLink = "/pseudo-classes">Contact</a></li>
+    <li><a routerLink = "/pseudo-classes">About</a></li>
+</ul>
