--- a/src/app/pseudo-classes/pseudo-classes.component.html
+++ b/src/app/pseudo-classes/pseudo-classes.component.html
@@ -27,7 +27,7 @@ Sit amet massa vitae tortor. Consequat ac felis donec et odio pellentesque diam.
 
 Vertical navigation example:
 <ul>
-    <li><a routerLink = "/pseudo-classes">Home</a></li>
+    <li class="active"><a routerLink = "/pseudo-classes">Home</a></li>
     <li><a routerLink = "/pseudo-classes">News</a></li>
     <li><a routerLink = "/pseudo-classes">Contact</a></li>
     <li><a routerLink = "/pseudo-classes">About</a></li>
