--- a/src/app/first-page/first-page.component.html
+++ b/src/app/first-page/first-page.component.html
@@ -11,6 +11,7 @@
     <div><a  routerLink="/float-style-page" class="menu-link">Float demo</a></div>
     <div><a  routerLink="/css-alignment-example" class="menu-link">Css alignment</a></div>
     <div><a  routerLink="/pseudo-classes" class="menu-link">Pseudo classes</a></div>
+    <div><a  routerLink="/vertical-navigation-demo" class="menu-link">Vertical Full page Navigation</a></div>
   </div>
   <h2>Here are some links to help you start: </h2>
   <ul>
