--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -1,9 +1,9 @@
 <ul>
     <li class="first">Home</li>
     <li><a routerLink="/horizontal-navigation-demo-one">Navigation Demo Horizontal</a></li>
-    <li>Contact</li>
-    <li>About</li>
-    <li>Home</li>
+    <li><a routerLink="/responsive-top-nav">Responsive top nav</a></li>
+    <li><a routerLink="/responsive-sidebar">Responsice side bar</a></li>
+    <li><a routerLink="/dropdown-one">Dropdown using div</a></li>
     <li>News</li>
     <li>Contact</li>
     <li>About</li>
