--- a/src/app/horizontal-navigation-one/horizontal-navigation-one.component.html
+++ b/src/app/horizontal-navigation-one/horizontal-navigation-one.component.html
@@ -5,7 +5,93 @@
     <li style="float: right;"><a class="active" routerLink="/horizontal-navigation-demo-one">News</a></li>
 </ul>
 
-
 <p><b>Note:</b> If a !DOCTYPE is not specified, floating items can produce unexpected results.</p>
 <p>A background color is added to the links to show the link area. The whole link area is clickable, not just the text.</p>
 <p><b>Note:</b> overflow:hidden is added to the ul element to prevent li elements from going outside of the list.</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
+<p>Some text some text some text some text..</p>
+
