--- a/src/app/dropdown-one/dropdown-one.component.html
+++ b/src/app/dropdown-one/dropdown-one.component.html
@@ -15,4 +15,61 @@
 
 <h3 style="background-color: beige;">Dropdown Menu inside a Navigation Bar</h3>
 <p>Hover over the "Dropdown" link to see the dropdown menu.</p>
+<br>
+<div class="dropdown-two">
+    <span>Mouse over me!!</span>
+    <div class="dropdown-content-two">
+        This is dropdown content
+    </div>
+</div>
+<br>
+<div class="dropdown-three">
+    <p>Please hover me!!!</p>
+    <div class="dropdown-content-three">
+        <a routerLink="/dropdown-one">Link1</a>
+        <a routerLink="/dropdown-one">Link2</a>
+        <a routerLink="/dropdown-one">Link3</a>
+    </div>
+</div>
 
+<hr>
+Drop down one more example
+<div class="four-container">
+    <div class="dropdown-four" style="float: left;">
+        <button class="dropbutton-four">Left Dropdown</button>
+        <div class="dropdown-content-four">
+            <a routerLink="/dropdown-one">Link1</a>
+            <a routerLink="/dropdown-one">Link2</a>
+            <a routerLink="/dropdown-one">Link3</a>
+        </div>
+    </div>
+    <div id="right-drop" class="dropdown-four" style="float: right;">
+        <button class="dropbutton-four">Right Dropdown</button>
+        <div class="dropdown-content-four">
+            <a routerLink="/dropdown-one">Link1</a>
+            <a routerLink="/dropdown-one">Link2</a>
+            <a routerLink="/dropdown-one">Link3</a>
+        </div>
+    </div>
+</div>
+<p> Another drop down with image</p>
+<div class="five-container">
+    <img src="./assets/wall.jpg" width="150px" height="auto">
+    <div class="five-content">
+        <img src="./assets/wall.jpg" width="350px" height="auto">
+        <p class="desc">Makeup kit of Pashanki!!!</p>
+    </div>
+</div>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
+<p>THE END</p>
