--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -4,7 +4,7 @@
     <li><a routerLink="/responsive-top-nav">Responsive top nav</a></li>
     <li><a routerLink="/responsive-sidebar">Responsice side bar</a></li>
     <li><a routerLink="/dropdown-one">Dropdown using div</a></li>
-    <li>News</li>
+    <li><a routerLink="/dropdown-two">Dropdown in menubar</a></li>
     <li>Contact</li>
     <li>About</li>
     <li>Home</li>
