--- a/src/app/dropdown-one/dropdown-one.component.css
+++ b/src/app/dropdown-one/dropdown-one.component.css
@@ -22,7 +22,7 @@ ul>li>a:hover {
     background-color: #ff0000;
 }
 
-.dropdown-content>a {
+.dropdown-content>a, .dropdown-three>.dropdown-content-three>a {
     color: #000;
     display: block;
     text-decoration: none;
@@ -46,4 +46,126 @@ ul>li>a:hover {
 
 ul>li.dropdown:hover .dropdown-content{
     display: block;
+}
+
+.dropdown-two {
+    display: inline-block;
+    position: relative;
+}
+
+.dropdown-two>.dropdown-content-two {
+    display: none;
+    background-color: #9e9e9e;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown-two:hover .dropdown-content-two {
+    display: block;
+}
+
+.dropdown-three {
+    position: relative;
+    background-color: #468b46;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.dropdown-content-three {
+    display: none;
+    width: 100%;
+    position: absolute;
+    background-color: #cacaca;
+}
+
+.dropdown-three:hover .dropdown-content-three {
+    display: block;
+}
+
+.dropdown-three>.dropdown-content-three>a:hover {
+    background-color: #949494;
+}
+
+.dropdown-four {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-four>.dropbutton-four {
+    background-color: #4b8f4b;
+    color: #fff;
+    padding: 16px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+
+.dropdown-four>.dropdown-content-four {
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    width: 100%;
+    display: none;
+}
+
+.dropdown-four>.dropdown-content-four>a {
+    padding: 12px 16px;
+    background-color: #dfdfdf;
+    display: block;
+    text-decoration: none;
+    color: #000;
+    opacity: 0.5;
+}
+
+.dropdown-four>.dropdown-content-four>a:hover {
+    background-color: #cacaca;
+    opacity: 1;
+}
+
+.dropdown-four:hover .dropdown-content-four {
+    display: block;
+}
+
+.dropdown-four:hover .dropbutton-four {
+    background-color: #018a01;
+}
+
+.four-container::after {
+    display: block;
+    clear: both;
+    content: "";
+}
+
+.five-container {
+    position: relative;
+    display: inline-block;
+}
+
+.five-content {
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    display: none;
+    opacity: 0.9;
+}
+
+.five-container:hover .five-content{
+    display: block;
+}
+
+.five-container::after {
+    display: block;
+    clear: both;
+    content: "";
+}
+
+.desc {
+    text-align: center;
+    text-decoration: underline;
+    color: red;
+    cursor: not-allowed;
 }
