responsive image gallery

--- a/src/app/dropdown-two/dropdown-two.component.html
+++ b/src/app/dropdown-two/dropdown-two.component.html
@@ -10,3 +10,31 @@
         </div>
     </li>
 </ul>
+
+<div class="gallery-container">
+    <div class="gallery-item">
+        <a target="_blank" href="./assets/wall.jpg">
+            <img src="./assets/wall.jpg"/>
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+    <div class="gallery-item">
+        <a target="_blank" href="./assets/wall.jpg">
+            <img src="./assets/wall.jpg"/>
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+    <div class="gallery-item">
+        <a target="_blank" href="./assets/wall.jpg">
+            <img src="./assets/wall.jpg"/>
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+    <div class="gallery-item">
+        <a target="_blank" href="./assets/wall.jpg">
+            <img src="./assets/wall.jpg"/>
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+</div>
+<p>Hello world</p>
