--- a/src/app/dropdown-two/dropdown-two.component.css
+++ b/src/app/dropdown-two/dropdown-two.component.css
@@ -8,7 +8,7 @@ ul {
 
 li {
     float: left;
-    border: 1px solid #fff;
+    border-right: 1px solid #fff;
 }
 
 li>a {
@@ -42,4 +42,55 @@ li:hover {
 
 .drop:hover .dropdown-content{
     display: block;
+}
+
+.gallery-container {
+    padding: 20px;
+}
+
+.gallery-item {
+    width: 300px;
+    height: auto;
+    border: 1px solid #a3a2a2;
+    padding: 2px;
+    float: left;
+    margin: 5px;
+}
+
+.gallery-item:hover {
+    border: 1px solid #000;
+}
+
+.gallery-item img {
+    width: 100%;
+    height: auto;
+}
+
+.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+.gallery-container::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+@media only screen and (max-width: 1000px) {
+    .gallery-item {
+        width: 40%;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .gallery-item {
+        width: 100%;
+    }
+
+    li {
+        float: none;
+        border-right: 1px solid #fff;
+        text-align: center;
+    }
 }
