image sprites demo

--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -5,7 +5,7 @@
     <li><a routerLink="/responsive-sidebar">Responsice side bar</a></li>
     <li><a routerLink="/dropdown-one">Dropdown using div</a></li>
     <li><a routerLink="/dropdown-two">Dropdown in menubar</a></li>
-    <li>Contact</li>
+    <li><a routerLink="/image-sprites">Image sprites</a></li>
     <li>About</li>
     <li>Home</li>
     <li>News</li>
