--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,22 @@ h1 {
 body {
     margin: 0px;
 }
+
+/* Image sprites*/
+.home-logo {
+    width: 46px;
+    height: 44px;
+    background: url(./assets/img_navsprites.gif) 0 0;
+}
+
+.arrow-left-logo {
+    width: 43px;
+    height: 44px;
+    background: url(./assets/img_navsprites.gif) -47px 0;
+}
+
+.arrow-right-logo {
+    width: 43px;
+    height: 44px;
+    background: url(./assets/img_navsprites.gif) -91px 0;
+}
