--- a/src/app/dropdown-one/dropdown-one.component.html
+++ b/src/app/dropdown-one/dropdown-one.component.html
@@ -17,7 +17,7 @@
 <p>Hover over the "Dropdown" link to see the dropdown menu.</p>
 <br>
 <div class="dropdown-two">
-    <span>Mouse over me!!</span>
+    <span (mouseover)="log()">Mouse over me!!</span>
     <div class="dropdown-content-two">
         This is dropdown content
     </div>
