--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -6,9 +6,9 @@
     <li><a routerLink="/dropdown-one">Dropdown using div</a></li>
     <li><a routerLink="/dropdown-two">Dropdown in menubar</a></li>
     <li><a routerLink="/image-sprites">Image sprites</a></li>
-    <li>About</li>
-    <li>Home</li>
-    <li>News</li>
+    <li><a routerLink="/css-forms-one">CSS forms example 1</a></li>
+    <li><a routerLink="/css-forms-two-responsive">CSS forms example 2 responsive</a></li>
+    <li><a routerLink="/css-counters">CSS counters</a></li>
     <li>Contact</li>
     <li>About</li>
     <li>Home</li>
