--- a/src/app/css-counters/css-counters.component.html
+++ b/src/app/css-counters/css-counters.component.html
@@ -10,3 +10,31 @@
 <h1>XML tutorials:</h1>
 <h2>XML</h2>
 <h2>XSL</h2>
+
+<hr>
+<p class="new"></p>
+
+<ol>
+    <li>item</li>
+    <li>item   
+    <ol>
+      <li>item</li>
+      <li>item</li>
+      <li>item
+      <ol>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+      </ol>
+      </li>
+      <li>item</li>
+    </ol>
+    </li>
+    <li>item</li>
+    <li>item</li>
+  </ol>
+  
+  <ol>
+    <li>item</li>
+    <li>item</li>
+  </ol>
