--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -9,7 +9,7 @@
     <li><a routerLink="/css-forms-one">CSS forms example 1</a></li>
     <li><a routerLink="/css-forms-two-responsive">CSS forms example 2 responsive</a></li>
     <li><a routerLink="/css-counters">CSS counters</a></li>
-    <li>Contact</li>
+    <li><a routerLink="/site-example-one">Responsive website example</a></li>
     <li>About</li>
     <li>Home</li>
     <li>News</li>
