--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -10,7 +10,7 @@
     <li><a routerLink="/css-forms-two-responsive">CSS forms example 2 responsive</a></li>
     <li><a routerLink="/css-counters">CSS counters</a></li>
     <li><a routerLink="/site-example-one">Responsive website example</a></li>
-    <li>About</li>
+    <li><a routerLink="/border-image">Border image</a></li>
     <li>Home</li>
     <li>News</li>
     <li>Contact</li>
