--- a/src/app/css-advanced-one/css-advanced-one.component.html
+++ b/src/app/css-advanced-one/css-advanced-one.component.html
@@ -1,2 +1,30 @@
 <p>css-advanced-one works!</p>
 <div class="border-image">Hello border</div>
+
+Multiple backgrounds:-
+<div class="small-background">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis nunc vel risus luctus semper. Nam ipsum eros,
+  laoreet quis purus vitae, feugiat blandit neque. Proin ut dui non nisi sollicitudin dapibus ut eget lectus. Aliquam
+  tincidunt nibh eu gravida consequat. Phasellus ut ultrices arcu, a scelerisque odio. Duis nec leo iaculis, venenatis
+  nibh ac, iaculis nulla. Nam diam velit, pulvinar at eleifend nec, vehicula interdum tortor. Nulla accumsan, justo a
+  pretium mattis, velit libero venenatis enim, vitae semper lectus tortor non libero. Duis ut neque ante. Vivamus
+  efficitur rhoncus dolor. Nulla facilisi. Vestibulum eget nulla ut magna mollis porta imperdiet quis sem. Cras at nunc
+  iaculis, semper orci id, mollis enim. Sed tempus magna vitae neque posuere, ac tincidunt nisl placerat. Vivamus
+  venenatis dolor eu mauris lacinia, non pretium magna sodales. Sed eu vestibulum nisl, nec rutrum orci.
+</div>
+
+<div class="gradient-div gradient1">
+  Simple gradient
+</div>
+<div class="gradient-div left-to-right">
+  left to right
+</div>
+<div class="gradient-div diagonal">
+  diagonal
+</div>
+<div class="gradient-div angle">
+  Angle
+</div>
+<div class="gradient-div multi-color">
+  Multi color
+</div>
