--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -11,7 +11,7 @@
     <li><a routerLink="/css-counters">CSS counters</a></li>
     <li><a routerLink="/site-example-one">Responsive website example</a></li>
     <li><a routerLink="/border-image">Border image</a></li>
-    <li>Home</li>
+    <li><a routerLink="/css-shadows">CSS Shadows</a></li>
     <li>News</li>
     <li>Contact</li>
     <li>About</li>
