--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -12,7 +12,7 @@
     <li><a routerLink="/site-example-one">Responsive website example</a></li>
     <li><a routerLink="/border-image">Border image</a></li>
     <li><a routerLink="/css-shadows">CSS Shadows</a></li>
-    <li>News</li>
+    <li><a routerLink="/transition-demo">Transition Demo</a></li>
     <li>Contact</li>
     <li>About</li>
     <li>Home</li>
