--- a/src/app/css-transforms-one/css-transforms-one.component.css
+++ b/src/app/css-transforms-one/css-transforms-one.component.css
@@ -48,3 +48,39 @@ div#abc {
 .scale:hover {
     transform: scale(0.5,1.5);
 }
+
+.tooltip-container {
+    position: relative;
+    margin: 10px;
+    display: inline-block;
+}
+
+.tooltip {
+    background-color: black;
+    color: blanchedalmond;
+    border-radius: 2px;
+    padding: 2px 5px;
+    top: 0px;
+    left:110%;
+    position: absolute;
+    width: 150px;
+    text-align: center;
+    font-size: 0.8em;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.tooltip::after {
+    content: "";
+    right: 100%;
+    border-style: solid;
+    border-color: transparent black transparent transparent;
+    border-width: 5px;
+    position: absolute;
+    top: 5px;
+}
+
+.tooltip-container:hover .tooltip {
+    visibility: visible;
+    opacity: 0.8;
+}
