--- a/src/app/css-form-two-responsive/css-form-two-responsive.component.css
+++ b/src/app/css-form-two-responsive/css-form-two-responsive.component.css
@@ -62,3 +62,8 @@ label {
     display: inline-block;
     padding: 12px 0px 0px 0px;
 }
+
+input[type="submit"]:disabled {
+    background-color: #4e4e4e;
+    color: #aaaaaa;
+}
