--- a/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
+++ b/src/app/vertical-navigation-demo/vertical-navigation-demo.component.html
@@ -14,7 +14,7 @@
     <li><a routerLink="/css-shadows">CSS Shadows</a></li>
     <li><a routerLink="/transition-demo">Transition Demo</a></li>
     <li><a routerLink="/css-transforms-one">CSS Transforms one</a></li>
-    <li>Contact</li>
+    <li><a routerLink="/grid-demo">Grid demo</a></li>
     <li>About</li>
     <li>Home</li>
     <li>News</li>
